--- a/Portfolio/assets/css/main.css
+++ b/Portfolio/assets/css/main.css
@@ -2675,8 +2675,8 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
-		color: #d2f2e9;
+		background: crimson;
+		color: black;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
@@ -2783,7 +2783,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: blue !important;
 						}
 
 					#header > nav ul li:first-child {
